fix overflow

--- a/src/component/Cat/Cat.scss
+++ b/src/component/Cat/Cat.scss
@@ -151,6 +151,7 @@
   height: 10px;
   width: 100px;
   background: white;
+  overflow: hidden;
 
   span {
     height: 100%;
